frontend/static/css/posts.css
#post-editor {
    display: none;
}

.post {
    width: 100%;
    display: block;
    overflow: hidden;
    position: relative;
    z-index: 5;
    letter-spacing: 0.01rem;
    font-style: normal;
    font-size: 125%;
    line-height: 1.67;
    color: #464848;
    font-family: var(--serif-font);
    font-weight: 300;
}

    .post p,
    .post h1,
    .post h2,
    .post h3,
    .post dl,
    .block-text {
        width: 100%;
        max-width: 900px;
        min-width: 200px;
        font-weight: 400;
        font-style: normal;
        box-sizing: content-box;
        padding: 0;
    }

    .post > p,
    .post > h1,
    .post > h2,
    .post > h3 {
        width: 90%;
        margin: 27px auto 0 35px;
    }

    .post h1 strong,
    .post h2 strong,
    .post h3 strong,
    .post .header-1 strong,
    .post .header-2 strong,
    .post .header-3 strong {
        font-size: 200%;
    }

    .post h1 small,
    .post h2 small,
    .post h3 small,
    .post .header-1 small,
    .post .header-2 small,
    .post .header-3 small,
    .post .header-4 small {
        opacity: 0.5;
    }

    .post h1 a,
    .post h2 a,
    .post h3 a,
    .post .header-1 a,
    .post .header-2 a,
    .post .header-3 a {
        opacity: 0.9;
    }

    .post hr {
        display: block;
        height: 1px;
        border: 0;
        border-top: dashed 2px #BDC3C7;
        margin: 1em 0 2em;
        padding: 0;
    }


    .post h1 + h1,
    .post h1 + h2,
    .post .header-1 + .header-1,
    .post .header-1 + .header-2 {
        padding-top: 10px;
    }

    .post h2 + h2,
    .post h2 + h3,
    .post .header-2 + .header-2,
    .post .header-2 + .header-3 {
        padding-top: 10px;
    }

    .post h1 a,
    .post h2 a,
    .post h3 a,
    .post .header-1 a,
    .post .header-2 a,
    .post .header-3 a {
        text-decoration: none !important;
    }

    .post ul, .post ol {
        padding-left: 35px;
        width: 95%;
        max-width: 800px;
        min-width: min(300px, 95%);
        padding-bottom: 1.2em;
        font-weight: 400;
        font-style: normal;
        letter-spacing: -0.003em;
        box-sizing: border-box;
    }

        .post li {
            margin-bottom: 15px;
        }

    .post figure a {
        border-bottom: none;
        text-decoration: none;
    }

    .post dl {
        padding-left: 0;
    }

        .post dd {
            margin-top: 10px;
            margin-left: 20px;
        }

        .post dt {
            margin-bottom: 20px;
            line-height: 1.3em;
            font-family: 'Ubuntu', Helvetica, Verdana, sans-serif;
            font-weight: bold;
            margin-top: 40px;
            padding: 0;
        }

    .post .code p {
        margin-bottom: 0;
        font-family: monospace;
    }

    .post code {
        font-family: 'Ubuntu', Helvetica, Verdana, sans-serif;
    }

    .post pre code {
        font-family: monospace;
        border-radius: 20px;
        white-space: pre;
        padding: 20px 30px;
    }

    .post figure {
        display: inline-block;
        vertical-align: top;
        font-family: 'Ubuntu', Helvetica, Verdana, sans-serif;
        font-size: 95%;
        color: #999;
        font-weight: 300;
    }

    .post figure * {
        width: 100%;
    }

    .post figure img {
        border-radius: 30px;
    }

    .post img {
        /* иначе легаси едет */
        max-width: 100%;
    }

    html[theme="dark"] .post img[src$=".png"] {
        filter: invert(85%) hue-rotate(180deg);
    }

    .post big {
        font-size: 120%;
    }

    .post .initial {
        display: inline-block;
        float: left;
        font-weight: normal;
        font-size: 420%;
        padding-right: 10px;
        line-height: 1.0em;
    }

    .post strong > em,
    .post .starting {
        font-size: 110%;
        font-style: normal;
        height: 35px;
        font-weight: 400;
        vertical-align: bottom;
        background-color: #4E4E4E;
        color: #EEE;
        padding: 4px 7px 5px;
        line-height: 1.6em;
        -webkit-box-decoration-break: clone;
        box-decoration-break: clone;
    }

        .post strong > em a,
        .post .starting a {
            color: #EEE;
        }

    .post table {
        table-layout: fixed;
        border-spacing: 10px;
        border-collapse: collapse;
    }

        .post table thead {
            text-align: left;
            font-size: 120%;
        }

            .post table thead th {
                padding-bottom: 30px;
            }

        .post table td {
            width: 1%;
            padding: 0 50px 30px 0;
            vertical-align: top;
            box-sizing: border-box;
        }

/* Text blocks */

.block-text {
    width: 100%;
    margin: 40px auto 40px;
    position: relative;
    display: block;
    padding: 40px 60px;
    clear: both;
    box-sizing: border-box;
    border-radius: 30px;
    background-color: var(--block-bg-color);
    color: var(--text-color);
}

    @media (max-width: 1024px) {
        .block-text {
            padding: 30px;
        }
    }

    @media (max-width: 570px) {
        .block-text {
            padding: 20px;
        }
    }

    .block-text p {
        padding-bottom: 1.2em;
    }

    .block-background__black .block-text {
        background-color: rgba(255, 255, 255, 0.1);
    }

    .block-text__black {
        color: var(--opposite-text-color);
        background-color: var(--opposite-block-bg-color);
    }

    .block-text__right {
        float: right;
        width: 50% !important;
        margin-right: 12% !important;
    }

    .block-text:last-child .inline-comments {
        display: none;
    }

.block-background {
    width: 100%;
    clear: both;
    position: relative;
    margin: 50px auto;
    padding-bottom: 30px;
    display: block;
    overflow: hidden;
    min-height: 200px;
    background: transparent repeat-y fixed center center;
    background-size: cover;
}
/* ... */

